# Github-Heroes

./: AUTHORS.md  HISTORY.md  LICENSE.txt  README.md  main.py  pyproject.toml  requirements.txt
core/: app.py  config.py  logging_utils.py
data/: database.py  models.py  repositories.py
game/: __init__.py  achievements.py  generators.py  logic.py  state.py
github/: analyzers.py  parsers.py  scraper.py
src/github_heroes/core/: __init__.py  app.py  config.py  logging_utils.py
src/github_heroes/data/: __init__.py  database.py  models.py  repositories.py
src/github_heroes/game/: __init__.py  achievements.py  generators.py  logic.py  state.py
src/github_heroes/github/: __init__.py  analyzers.py  parsers.py  scraper.py
src/github_heroes/ui/: __init__.py  main_window.py
src/github_heroes/ui/widgets/: __init__.py  combat_dialog.py  dungeon_view.py  map_view.py  player_image_selector.py  player_view.py  progress_dialog.py  quest_board.py  recycler_dialog.py  search_panel.py  settings_dialog.py  status_bar.py
ui/: __init__.py  main_window.py
ui/widgets/: combat_dialog.py  dungeon_view.py  map_view.py  player_image_selector.py  player_view.py  quest_board.py  recycler_dialog.py  search_panel.py  settings_dialog.py
