[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

[project]
name = "github-heroes"
description = "An RPG 'Github Repo' game that turns GitHub repositories into dungeons, enemies, quests, and loot."
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
dependencies = [
    "click",
    "PyQt6>=6.9",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
]
dynamic = ["version"]

[project.scripts]
github-heroes= "github_heroes.core.app:run_app"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/github_heroes"]
